--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/introspection/DomainObjectIntrospectionVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/introspection/DomainObjectIntrospectionVm-description.adoc
@@ -1,8 +1,47 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `introspection` attribute ...
+Introspection is the process by which the framework builds up its internal metamodel, using the Java reflection API to identify various methods and using the naming conventions of the programming model to infer actions, properties and collections.
 
-WARNING: TODO[CAUSEWAY-3312]
-Controls on a per class basis, how meta-model class introspection should process members, supporting methods and callback methods.
+The framework supports three different introspection policies, depending on your taste of whether the metamodel should be explicitly called out (but that means more 'boilerplate'), or should be inferred so far as possible.
+These introspection policies are:
 
+* "annotation optional"
++
+Introspect public methods only, recognising getters as either properties or collections, and other public methods as actions.
++
+Supporting methods (hide, disable, validate, choices, autoComplete) do not need to be annotated either.
 
+* "annotation required"
++
+Requires that getter methods representing properties or collections, and public methods representing actions are all explicitly annotated (with link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html[@Property], link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Collection.html[@Collection] and link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Action.html[@Action])
++
+Supporting methods (hide, disable, validate, choices, autoComplete) do not need to be annotated.
+
+* "encapsulation enabled"
++
+Requires that both the methods representing properties, collections an actions are annotated (with link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html[@Property], link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Collection.html[@Collection] and link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Action.html[@Action]), and _also_ that the supporting methods are annotated (with link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/MemberSupport.html[@MemberSupport]).
++
+However, the methods can have _any_ visibility, including `private` visibility.
+This reduces the programmatic API of the domain object can so can help eliminate bugs.
+
+The default policy is set using a configuration property:
+
+[source,yaml]
+.application.yaml
+----
+causeway:
+  core:
+    meta-model:
+      introspector:
+        policy: annotation_optional     <.>
+----
+<.> `annotation_optional` | `annotation_required` | `encapsulation_enabled`
+
+Normally there would be little reason to override this - just adopt the convention that best fits your style, and leave it at that.
+However, it the need arises then it can be overridden on a class by class basis using the link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/DomainObject.html#introspection[@DomainObject#introspection] attribute.
+
+=== How this demo works
+
+The collections on the left show three variants of the same entity, each with a property and an action, but each configured to use a different introspection policy.
+
+Navigate through to each class to inspect the differences in their source code.
