--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/introspection/annotReqd/jpa/DomainObjectIntrospectionAnnotReqdJpa-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/introspection/annotReqd/jpa/DomainObjectIntrospectionAnnotReqdJpa-description.adoc
@@ -8,7 +8,6 @@ The introspection of this domain object indicates that annotations are required 
 include::DomainObjectIntrospectionAnnotReqdJpa.java[tags=class]
 ----
 <.> must annotate as `@Property`.
-+
 It would also be ok to remove the methods but then annotate the field with `@Property` and also with `@lombok.Getter` and `@lombok.Setter`
 <.> must annotate as `@Action`
-<.> must annotate as `@MemberSupport` or `@Domain.Include`
+<.> no need to annotate with `@MemberSupport`
